fixed form layout on small devices width < 600px

--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -28,28 +28,6 @@ div.content {
   height: 1000px;
 }
 
-@media screen and (max-width: 700px) {
-  .sidebar {
-    height: 100vh;
-    width: 180px;
-  }
-
-  div.content {
-    margin-left: 0;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .sidebar {
-    height: auto;
-    width: 130px;
-  }
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-}
-
 .header {
   height: 60px;
   background-color: #04aa6d;
@@ -104,17 +82,44 @@ div.body {
 }
 
 
+
+@media screen and (max-width: 400px) {
+  .sidebar {
+    height: auto;
+    width: 130px;
+  }
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    height: 100vh;
+    width: 180px;
+  }
+
+  div.content {
+    margin-left: 0;
+  }
+}
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {}
+@media only screen and (max-width: 600px) {
+}
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {}
+@media only screen and (min-width: 600px) {
+}
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {}
+@media only screen and (min-width: 768px) {
+}
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {}
+@media only screen and (min-width: 992px) {
+}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {}
+@media only screen and (min-width: 1200px) {
+}
